--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,10 +1,10 @@
 body {
-    background-color: #f8f9fa;
+    background-color: white;
     font-family: 'Arial', sans-serif;
   }
   
   .navbar {
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(202, 15, 15, 0.1);
     transition: background-color 0.3s;
   }
   
@@ -18,6 +18,7 @@ body {
     font-size: 1.1rem;
     margin-right: 10px;
     transition: color 0.3s;
+ 
   }
   
   .nav-link:hover {
@@ -41,7 +42,7 @@ body {
   }
   
   .footer {
-    background-color: #343a40;
+    background-color: white;
     color: #000000;
     padding: 10px 0;
     text-align: center;
@@ -52,7 +53,7 @@ body {
   }
   
   .footer a {
-    color: #000000;
+    color: black;
     text-decoration: none;
     transition: color 0.3s;
   }
