--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -26,7 +26,10 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="{% url 'home' %}">Ana Sayfa</a>
@@ -48,9 +51,7 @@
       </div>
     </nav>
 
-    <div class="container mt-4">
-      {% block content %} {% endblock %}
-    </div>
+    <div class="container mt-4">{% block content %} {% endblock %}</div>
 
     <footer class="footer">
       <div class="container">
