--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -15,7 +15,7 @@
     </form>
     <div class="border-top pt-3">
       <small class="text-muted">
-        Zaten bir hesabınız var mı? <a href="#">Giriş Yap</a>
+        Zaten bir hesabınız var mı? <a href="{% url 'login' %}">Giriş Yap</a>
       </small>
     </div>
   </div>
