--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -45,6 +45,10 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'register' %}">Kayıt Ol</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'about' %}">Hakkımızda</a>
+            </li>
+            
             {% endif %}
           </ul>
         </div>
