--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div class="jumbotron">
-    <h1 class="display-4">Oylama Uygulamasına Hoş Geldiniz!</h1>
-    <p class="lead">Kayıt olabileceğiniz, giriş yapabileceğiniz ve çeşitli anketlere katılabileceğiniz basit bir oylama uygulamasıdır.</p>
+    <h1 class="display-4">Bileşen Oylama Sistemine Hoş Geldiniz!</h1>
+    <p class="lead">Sisteme kayıt olup admin onayını aldıktan sonra bileşen yüklemelerinizi gerçekleştirilebilir ve oylamaya dahil olabilirsiniz.</p>
     <hr class="my-4">
     <p>Kayıt olmak veya giriş yapmak için gezinme çubuğunu kullanın.</p>
 </div>
