--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Oylama Uygulaması</a>
+        <a class="navbar-brand" href="#">Bileşen Oylama Sistemi</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -26,10 +26,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div
-          class="collapse navbar-collapse justify-content-end"
-          id="navbarNav"
-        >
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="{% url 'home' %}">Ana Sayfa</a>
@@ -38,6 +35,14 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'logout' %}">Çıkış Yap</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'profile' %}">Hoş geldiniz {{ request.user }}</a>
+            </li>
+            {% if user.is_staff %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'custom_admin' %}">Admin Paneli</a>
+            </li>
+            {% endif %}
             {% else %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'login' %}">Giriş Yap</a>
@@ -45,21 +50,22 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'register' %}">Kayıt Ol</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'about' %}">Hakkımızda</a>
-            </li>
-            
             {% endif %}
+
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'about' %}">Hakkında</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
-
+    
+    
     <div class="container mt-4">{% block content %} {% endblock %}</div>
 
     <footer class="footer">
       <div class="container">
-        <span>&copy; 2024 Oylama Uygulaması</span>
+        <span>&copy; 2024 Bileşen Oylama Sistemi</span>
       </div>
     </footer>
 
